[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Interface/PauseMenu.gd" type="Script" id=1]

[node name="PuaseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
color = Color( 0, 0, 0, 0.545098 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -454.0
margin_top = -360.0
margin_right = 454.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 452.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -220.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContinue" type="Button" parent="HBoxContainer/Control/VBoxContainer"]
margin_right = 452.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Continuar"

[node name="ButtonOptions" type="Button" parent="HBoxContainer/Control/VBoxContainer"]
margin_top = 180.0
margin_right = 452.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Opcions"

[node name="ButtonExit" type="Button" parent="HBoxContainer/Control/VBoxContainer"]
margin_top = 360.0
margin_right = 452.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Eixir"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 456.0
margin_right = 908.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 452.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="HBoxContainer/Control/VBoxContainer/ButtonContinue" to="." method="_on_ButtonContinue_pressed"]
[connection signal="pressed" from="HBoxContainer/Control/VBoxContainer/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="HBoxContainer/Control/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
